<resources>
    <string name="app_name">APP Hoja de Vida</string>
    <string name="HV">APP Curriculum</string>
    <string name="Nombre" translatable="false">JORGE ALEJANDRO ARENAS MEJIA</string>
    <string name="Correo" translatable="false">jorandro@gmail.com</string>
    <string name="Tel" translatable="false">3509094527</string>
    <string name="Ciudad" translatable="false">Bogotá, Colombia</string>
    <string name="SIG">NEXT</string>
    <string name="ATRAS">BACK</string>
    <string name="RESUMEN">RESUME</string>
    <string name="EXP">EXPERIENCE</string>
    <string name="READ">READED</string>
    <string name="PROYECTS">PROYECTS</string>
    <string name="PROY1">IMPLEMENTATION SWITCHES CORE – REGISTRADURIA NACIONAL DEL ESTADO CIVIL</string>
    <string name="PROY2">IMPLEMENTATION SOLUTION WIFI – AERONAUTICA CIVIL DE COLOMBIA</string>
    <string name="PROY3">"IMPLEMENTATION SOLUTION CONECTIVITY STORE WOM "</string>
    <string name="PROY4">IMPLEMENTATION SWITCH  ACCESS – DANE</string>
    <string name="ACEPT">ACCEPT</string>
    <string name="COMPLET">" COMPLETE"</string>
    <string name="END">CANDIDATE ACCEPTED</string>
    <string name="MAIN">PRINCIPAL</string>
    <string name="DESC">Engineer in process of degree with deepening in telecommunications, certified in Huawei equipment, knowledge in Networking equipment (LAN, WAN, Switchng, Routing, VoIP, Firewall). I have skills to develop teamwork, personnel management, initiative to solve problems, leadership, work under pressure.</string>
</resources>